--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -528,7 +528,8 @@
 
 					@foreach (var suscripcion2 in SuscripcionesAntiguos(juego.Suscripciones))
 					{
-						<div style="display: flex; align-items: center; font-size: 16px; padding: 5px 15px; margin-top: 10px; margin-bottom: 10px;">
+						<hr />
+						<div style="display: flex; align-items: center; font-size: 16px; padding: 15px 5px;">
 							<div style="margin-right: 15px;">
 								<img src="@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).ImagenIcono" style="max-width: 22px; max-height: 22px;" />
 							</div>
@@ -537,9 +538,14 @@
 								<img src="@JuegoDRM2.SacarImagen(suscripcion2.DRM)" style="max-width: 22px; max-height: 22px;" />
 							</div>
 
-							<div style="margin-right: 20px; width: 100%;">
+							<div style="padding-right: 20px; width: 15%;">
 								<label>@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).Nombre</label><br />
 								<label style="font-size: 13px;">@Calculadora.DiferenciaTiempo(suscripcion2.FechaTermina, idioma)</label>
+							</div>
+
+							<div style="padding-right: 20px; width: 85%;">
+								<label>@Idiomas.CogerCadena(idioma, "Game.String38") @Calculadora.DiferenciaDuranteDias(suscripcion2.FechaEmpieza, suscripcion2.FechaTermina, idioma)</label><br />
+								<label style="font-size: 13px;">@suscripcion2.FechaEmpieza.Day.ToString()/@suscripcion2.FechaEmpieza.Month.ToString()/@suscripcion2.FechaEmpieza.Year.ToString() • @suscripcion2.FechaTermina.Day.ToString()/@suscripcion2.FechaTermina.Month.ToString()/@suscripcion2.FechaTermina.Year.ToString()</label>
 							</div>
 						</div>
 					}
